src/kubernetes/cinemaabyss/templates/namespace.yaml
---
# Source: cinemaabyss/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cinemaabyss
  labels:
    name: cinemaabyss
